# relay

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  database.py  gp_pdf_registry.py  main.py
app/models/: case.py  clinical.py  medical_history.py  nemsis.py  summary.py  transcript.py
app/routers/: cases.py  gp_call.py  hospital.py  stream.py
app/services/: clinical_insights.py  core_info_checker.py  event_bus.py  fhir_client.py  gp_caller.py  gp_documents.py  gp_lookup.py  llm.py  medical_db.py  nemsis_extractor.py  qa.py  summary.py  transcription.py  vitals_dataset.py  voice_agent.py
data/gp_records/: .gitkeep
data/vitals/: README.md
docs/: gcp-setup.md
infra/: modal_app.py
static/: app.js  app_enhanced.js  hospital.css  hospital.html  hospital.js  index.html  index_enhanced.html  style.css  style_enhanced.css
tests/: conftest.py  test_api.py  test_database.py  test_fhir_client.py  test_gp_caller.py  test_gp_lookup.py  test_llm.py  test_medical_db.py  test_models.py  test_services.py  test_summary.py  test_voice_agent.py  test_websocket.py
